# 3D-AGSCaps

./: .gitignore  CITATION.cff  README.md  README.rst  main.py  pyproject.toml
.github/workflows/: python-qc.yml
agscaps/: data.py  helpers.py  loss.py  models.py
agscaps/layers/: asfe.py  attention.py  convcaps.py
capsules/: data.py  helpers.py  models.py
capsules/layers/: asfe.py  attention.py  capsblocks.py  convcaps.py  switchnorm.py
tests/: test_3d_capsules.py
