[tool.poetry]
name = "3D-Capsules"
version = "0.1.0"
description = ""
authors = ["Clément POIRET <poiret.clement@outlook.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.1"
pytorch-lightning = "^1.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
